# MusicHub

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  readme.md
.github/workflows/: docker-publish.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: access.py  auth.py  discover.py  download.py  health.py  library.py  preview.py  settings.py  stats.py  subscriptions.py  tasks.py
backend/app/crypto/: __init__.py  netease_eapi.py  netease_linux.py  netease_weapi.py  qq_hash33.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/services/: access_auth_service.py  dedupe.py  download_service.py  local_file_service.py  m3u_service.py  normalize.py  organize.py  scheduler.py  settings_service.py  sync_service.py  tag_service.py  task_manager.py
backend/app/utils/: logger.py
backend/scripts/: verify.py
backend/tests/: test_crypto_netease_eapi.py  test_crypto_netease_linux.py  test_crypto_netease_weapi.py  test_crypto_qq_hash33.py
docs/: account-playlist-api.md  daily-playlist-api.md  kuwo-download-api.md  media-metadata-api.md  netease-download-api.md  netease-qr-login-api.md  playlist-detail-api.md  qq-download-api.md  qq-music-qr-login-api.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/assets/: main.css
frontend/src/components/: AccessLogin.vue  AccessPasswordSettings.vue  AccountManager.vue  AccountStatus.vue  AppLayout.vue  DailyPanel.vue  DownloadSettings.vue  HotPlaylistsPanel.vue  MyPlaylistsPanel.vue  OrganizeSettings.vue  PlayerBar.vue  PlaylistGrid.vue  SearchPanel.vue  SongListTable.vue  SubscribeOptionsDialog.vue  SubscriptionQuickItem.vue  SubscriptionsManager.vue  UrlImportPanel.vue
frontend/src/composables/: useSidebar.ts
frontend/src/icons/: BellAltIcon.vue  BoltAltIcon.vue  BoxcubeAltIcon.vue  CalendarAltIcon.vue  ChartAltIcon.vue  DashboardAltIcon.vue  DollarIcon.vue  EmailAltIcon.vue  FilesIcon.vue  HeadphoneAltIcon.vue  InboxAltIcon.vue  LayoutIcon.vue  MenuIcon.vue  MinusAltIcon.vue  MinusIcon.vue  MultiUserIcon.vue  PlusAltIcon.vue  SettingsAlt.vue  UserAltIcon.vue  UserMoneyIcon.vue  index.ts
scripts/: run-backend.sh
(+58 files in other folders)
