[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musichub"
version = "0.1.0"
description = "Self-hosted multi-platform music downloader (Netease + QQ Music)"
readme = "../readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MusicHub" }]

# ============================================================
# 运行时依赖
# ============================================================
dependencies = [
    # ----- Web 框架 -----
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.32",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",

    # ----- HTTP 客户端 -----
    "httpx>=0.27,<0.28",
    "qqmusic-api-python>=0.5.3,<0.6",

    # ----- 数据库 -----
    "sqlalchemy>=2.0,<3.0",
    "aiosqlite>=0.20,<0.21",
    "alembic>=1.13,<2.0",
    "greenlet>=3.0,<4.0",  # SQLAlchemy async 必需依赖

    # ----- 加密算法 -----
    "pycryptodome>=3.20,<4.0",

    # ----- 音频元数据 -----
    "mutagen>=1.47,<2.0",

    # ----- 二维码 -----
    "qrcode>=7.4,<8.0",
    "pillow>=10.3,<12.0",

    # ----- 调度器 -----
    "apscheduler>=3.10,<4.0",

    # ----- 日志 -----
    "loguru>=0.7,<0.8",

    # ----- HTML 解析（URL 导入用）-----
    "lxml>=5.2,<6.0",
    "beautifulsoup4>=4.12,<5.0",
]

# ============================================================
# 可选开发依赖
# ============================================================
[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.5,<0.7",
    "mypy>=1.10,<2.0",
]

[project.scripts]
# 命令行验证脚本入口
musichub-verify = "scripts.verify:main"

# ============================================================
# 工具配置
# ============================================================
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
